# mediwatch_model

./: .gitignore  MODEL_CARD.md  README.md  README.old.md  generate_windows.py  mlflow_cleanup.py  mlflow_registry.py  pipeline_architecture.mermaid  pyproject.toml  run_local.py  runner.py  runner_cleanup.py  summary.json  testMLFlow.py
.github/workflows/: ci.yml  docker-build.yml
airflow/: AIRFLOW_README.md  CLAUDE.md  Dockerfile  acceptance_test_dag.py  docker-compose.pipeline.yml  docker-compose.yml  run_acceptance_test.sh  trigger_windows.py
airflow/dags/: pipeline_dag.py
artifacts/evaluations/: eval_model_2004-12-31_on_2004-12-31.json  eval_model_2004-12-31_on_2005-12-31.json  eval_model_2005-12-31_on_2005-12-31.json  eval_model_2005-12-31_on_2006-12-31.json  eval_model_2005-12-31_on_2007-12-31.json  eval_model_2006-12-31_on_2006-12-31.json  eval_model_2007-12-31_on_2007-12-31.json  eval_model_2007-12-31_on_2008-12-31.json  eval_model_2008-12-31_on_2008-12-31.json
docs/: sliding_window_analysis.md
scripts/: verify_mlflow_cleanup.py  verify_mlflow_registry.py
serving/: Dockerfile  README.md  app.py
src/: config.py  data.py  drift.py  mlflow_utils.py  preprocessing.py  training.py
tests/: test_evaluation.py  test_preprocessing.py  test_promotion.py  test_serving.py
windows/: 2004-12-31-eval.parquet  2004-12-31-train.parquet  2005-12-31-eval.parquet  2005-12-31-train.parquet  2006-12-31-eval.parquet  2006-12-31-train.parquet  2007-12-31-eval.parquet  2007-12-31-train.parquet  2008-12-31-eval.parquet  2008-12-31-train.parquet
(+9 files in other folders)
