[project]
name = "mediwatch-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "apache-airflow>=3.1.7",
    "evidently>=0.7.20",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
