[project]
name = "mediwatch-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "apache-airflow>=3.1.7",
    "evidently>=0.4,<0.5",
    "graphviz>=0.21",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "pandas<3.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
