[project]
name = "mediwatch-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.9,<3",
    "evidently>=0.4,<0.5",
    "graphviz>=0.21",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "pandas<3.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/old"]

[tool.ruff.lint]
select = ["E", "F", "I"]
